--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,5 +16,7 @@ jobs:
           java-version: 21
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
       - name: Build with Gradle
         run: ./gradlew bootJar
