feature(actions): update `release.yml`

--- a/.github/workflows/manage-service.yml
+++ b/.github/workflows/manage-service.yml
@@ -7,9 +7,10 @@ on:
       action:
         description: 'Action to perform'
         required: true
-        default: 'start'
+        default: 'restart'
         type: choice
         options:
+          - restart
           - start
           - stop
 
@@ -18,16 +19,19 @@ on:
       action:
         description: 'Action to perform'
         required: true
+        default: 'restart'
         type: string
 
 jobs:
   manage-service:
     runs-on: ubuntu-latest
     steps:
+      - name: Setup SSH
+        uses: ./.github/actions/setup-ssh
+        with:
+          ssh_key: ${{ secrets.SSH_KEY }}
+          ssh_host: ${{ secrets.SSH_HOST }}
+
       - name: Manage service on remote server
         run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
           ssh -i ~/.ssh/id_ed25519 ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "sudo systemctl ${{ inputs.action }} ${{ secrets.SERVICE_NAME }}"
