feature(actions): update `release.yml`

--- a/.github/workflows/manage-service.yml
+++ b/.github/workflows/manage-service.yml
@@ -25,6 +25,9 @@ jobs:
   manage-service:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout sources
+        uses: actions/checkout@v4
+
       - name: Setup SSH
         uses: ./.github/actions/setup-ssh
         with:
