feature(actions): update `release.yml`

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,7 @@ jobs:
       - name: Build and Test with Gradle
         run: |
           chmod +x ./gradlew
-          ./gradlew build --scan
-          ./gradlew test bootJar
+          ./gradlew build
 
       - name: Setup SSH
         uses: ./.github/actions/setup-ssh
