--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ repositories {
 }
 
 dependencies {
+    implementation libs.bundles.telegrambots
     implementation 'org.apache.commons:commons-collections4:4.5.0'
     implementation 'org.hibernate.orm:hibernate-community-dialects'
     implementation 'org.jsoup:jsoup:1.20.1'
@@ -37,8 +38,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.telegram:telegrambots-client:8.3.0'
-    implementation 'org.telegram:telegrambots-springboot-longpolling-starter:8.3.0'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
@@ -93,5 +92,11 @@ sonar {
         property "sonar.organization", "yvasyliev"
         property "sonar.host.url", "https://sonarcloud.io"
         property "sonar.sources", "src/main/resources/templates"
+    }
+}
+
+tasks.register('printBootJarPath') {
+    doLast {
+        println project.relativePath(bootJar.destinationDirectory.get().asFile)
     }
 }
