--- a/.github/actions/setup-ssh/action.yml
+++ b/.github/actions/setup-ssh/action.yml
@@ -10,12 +10,22 @@ inputs:
     required: true
     description: SSH host
 
+outputs:
+  ssh-key-path:
+    description: The path to the SSH private key
+    value: ${{ steps.setup-ssh.outputs.ssh-key-path }}
+
 runs:
   using: "composite"
   steps:
-    - run: |
+    - name: Setup SSH
+      id: setup-ssh
+      env:
+        SSH_KEY_PATH: ~/.ssh/id_ed25519
+      run: |
         mkdir -p ~/.ssh
-        echo "${{ inputs.ssh_key }}" > ~/.ssh/id_ed25519
-        chmod 600 ~/.ssh/id_ed25519
+        echo "${{ inputs.ssh_key }}" > $SSH_KEY_PATH
+        chmod 600 $SSH_KEY_PATH
         ssh-keyscan -H ${{ inputs.ssh_host }} >> ~/.ssh/known_hosts
+        echo "ssh-key-path=$SSH_KEY_PATH" >> $GITHUB_OUTPUT
       shell: bash
