--- a/.github/actions/setup-gradle/action.yml
+++ b/.github/actions/setup-gradle/action.yml
@@ -13,6 +13,8 @@ runs:
 
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v4
+      with:
+        add-job-summary-as-pr-comment: 'always'
 
     - name: Make Gradle Wrapper Executable
       run: chmod +x ./gradlew
