--- a/build.gradle
+++ b/build.gradle
@@ -103,3 +103,10 @@ sonar {
         property "sonar.sources", "src/main/resources/templates"
     }
 }
+
+develocity {
+    buildScan {
+        termsOfUseUrl = "https://gradle.com/help/legal-terms-of-use"
+        termsOfUseAgree = "yes"
+    }
+}
