feat(build): automatically merge bot Pull Requests

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,3 +24,12 @@ jobs:
         uses: ./.github/actions/build-with-gradle
         with:
           sonar-token: ${{ secrets.SONAR_TOKEN }}
+
+      - name: Approve and merge bot PRs automatically
+        if: ${{ contains(fromJSON('["dependabot[bot]", "github-actions[bot]"]'), github.actor) && github.event_name == 'pull_request'}}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_URL: ${{ github.event.pull_request.html_url }}
+        run: |
+          gh pr review --approve "$PR_URL"
+          gh pr merge --squash --auto "$PR_URL"
