--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,7 +11,13 @@ updates:
       interval: "daily"
     assignees:
       - "yvasyliev"
+    labels:
+      - "dependencies"
+      - "java"
+      - "minor"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "daily"
+    assignees:
+      - "yvasyliev"
