feat(build): call `build` from `gradle-wrapper-bump`

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - run: |
+          echo "${{ github.head_ref }}"
+          echo "${{ github.ref }}"
+
       - name: Checkout sources
         uses: actions/checkout@v4
         with:
