--- a/build.gradle
+++ b/build.gradle
@@ -97,7 +97,7 @@ compileJava {
 
 sonar {
     properties {
-        property "sonar.projectKey", "yvasyliev_reddit-telegram-forwarder"
+        property "sonar.projectKey", "io.github.yvasyliev.telegramforwarderbot:telegram-forwarder-bot"
         property "sonar.organization", "yvasyliev"
         property "sonar.host.url", "https://sonarcloud.io"
         property "sonar.sources", "src/main/resources/templates"
