--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,8 @@ reddit:
   host: https://www.reddit.com
   user-agent: java:$group:v\${telegram.bot.version} (by /u/\${reddit.username})
   video-downloader:
-    uri: https://viddit.io/download
-    css-selector: a.download__item__info__actions__button
+    uri: https://rapidsave.com/info
+    css-selector: div.download-info a.downloadbutton
 
 spring:
   datasource:
