--- a/.github/workflows/publish-javadoc.yml
+++ b/.github/workflows/publish-javadoc.yml
@@ -16,6 +16,12 @@ jobs:
       - name: Setup Gradle
         uses: ./.github/actions/setup-gradle
 
+      - name: Fetch and merge remote gh-pages
+        run: |
+          git fetch origin gh-pages || true
+          git checkout -B gh-pages origin/gh-pages || git checkout -b gh-pages
+          git merge --allow-unrelated-histories master || true
+
       - name: Generate Javadoc
         run: ./gradlew javadoc
 
@@ -29,7 +35,6 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git checkout -b gh-pages
           git add .
           git commit -m "Update Javadoc" || echo "No changes to commit"
           git push origin gh-pages
