feat: create `telegram-forwarder-starter-reddit` module

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,4 @@ include 'telegram-forwarder-bot'
 include 'telegram-forwarder-starter'
 include 'telegram-forwarder-starter-logging'
 include 'telegram-forwarder-starter-thymeleaf'
+include 'telegram-forwarder-starter-reddit'
